Fixing alignment issue due to the image padding

--- a/editor-serif.css
+++ b/editor-serif.css
@@ -1143,10 +1143,22 @@ h1, h2, h3, h4, h5, h6 {
 .comment-body img,
 .entry-content img {
   padding: 5px 5px 4px;
-  margin: -5px -5px -4px;
+  margin: 0 -5px 0;
   background: white;
   line-height: .9;
   box-shadow: 0 2px 2px #c2c2c2;
+}
+.comment-body img.alignleft,
+.entry-content img.alignleft {
+  margin-right: 15px;
+}
+.comment-body img.alignright,
+.entry-content img.alignright {
+  margin-left: 15px;
+}
+.comment-body img.aligncenter,
+.entry-content img.aligncenter {
+  margin: 0 auto;
 }
 .comment-body img.wp-smiley,
 .entry-content img.wp-smiley {
@@ -1417,8 +1429,8 @@ body#tinymce a {
   color: black;
 }
 body#tinymce .alignleft {
-  margin-right: 1.5em;
+  margin-right: 1em;
 }
 body#tinymce .alignright {
-  margin-left: 1.5em;
+  margin-left: 1em;
 }
