--- a/sass/editor-monospace.scss
+++ b/sass/editor-monospace.scss
@@ -93,10 +93,10 @@ body#tinymce{
 	}	
 
 	.alignleft {
-		margin-right: 1.5em;
+		margin-right: 1em;
 	}
 
 	.alignright {
-		margin-left: 1.5em;
+		margin-left: 1em;
 	}	
 }
