--- a/sass/modules/_alignments.scss
+++ b/sass/modules/_alignments.scss
@@ -1,13 +1,13 @@
 .alignleft {
 	display: inline;
 	float: left;
-	margin-right: 1.5em;
+	margin-right: 1em;
 }
 
 .alignright {
 	display: inline;
 	float: right;
-	margin-left: 1.5em;
+	margin-left: 1em;
 }
 
 .aligncenter {
